Fix menu items alignment

--- a/src/sass/modulos/menus/global.sass
+++ b/src/sass/modulos/menus/global.sass
@@ -113,7 +113,7 @@
     font: normal normal normal 19px/1 FontAwesome
     display: inline-block
     margin-left: 5px
-    line-height: 12px
+    line-height: 0px // fix menu items alignment
     transform: translateY(2px)
 
 %item-has-children-arrow-right
